# jarvis-android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/jarvis/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/jarvis/android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/jarvis/android/data/db/: DatabaseTest.kt
app/src/androidTest/java/com/jarvis/android/engine/: LLMEngineTest.kt  TTSEngineTest.kt  VADEngineTest.kt  WhisperEngineTest.kt
app/src/androidTest/java/com/jarvis/android/integration/: MemoryPersistenceTest.kt  VoicePipelineTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/jarvis/: MainActivity.kt
app/src/main/java/com/example/jarvis/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/jarvis/android/: JarvisApp.kt  MainActivity.kt
app/src/main/java/com/jarvis/android/assistant/: ContextBuilder.kt  ConversationOrchestrator.kt  MemoryExtractor.kt  OrchestratorState.kt
app/src/main/java/com/jarvis/android/data/db/: AppDatabase.kt
app/src/main/java/com/jarvis/android/data/db/dao/: ConversationDao.kt  MemoryDao.kt  MessageDao.kt  SummaryDao.kt
app/src/main/java/com/jarvis/android/data/di/: DatabaseModule.kt
app/src/main/java/com/jarvis/android/data/repository/: ConversationRepository.kt  MemoryRepository.kt  SummaryRepository.kt
app/src/main/java/com/jarvis/android/di/: EngineModule.kt
app/src/main/java/com/jarvis/android/engine/: AudioRecorder.kt  LLMEngine.kt  TTSEngine.kt  VADEngine.kt  WhisperEngine.kt
app/src/main/java/com/jarvis/android/ui/: AppNavigation.kt
app/src/main/java/com/jarvis/android/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/jarvis/android/ui/download/: DownloadScreen.kt  DownloadViewModel.kt
app/src/main/java/com/jarvis/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/jarvis/android/worker/: SummarizationWorker.kt
app/src/test/java/com/jarvis/android/: ExampleUnitTest.kt
app/src/test/java/com/jarvis/android/assistant/: ContextBuilderTest.kt  ConversationOrchestratorTest.kt  MemoryExtractorTest.kt
app/src/test/java/com/jarvis/android/data/repository/: ConversationRepositoryTest.kt
app/src/test/java/com/jarvis/android/worker/: SummarizationWorkerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
